---
source: spade-tests/src/ast_lowering.rs
---
enum Maybe<L, R, #uint N> {
    Left { val: [L; N] },
    Right { val : [R; N] },
}

impl<T> Maybe<T, bool, 2> {
    fn foo(self, t: T, u: ()) -> [Self; 2] {
        [Self::Left([t, t]), Self::Right([u, u])]
    }
}


error: Output type mismatch. Expected [Maybe<core::marker::Data + core::marker::Copy, bool, 2>; 2], got [Maybe<core::marker::Data + core::marker::Copy, (), 2>; 2]
  ┌─ testinput:7:44
  │  
7 │       fn foo(self, t: T, u: ()) -> [Self; 2] {
  │                             --     --------- [Maybe<core::marker::Data + core::marker::Copy, bool, 2>; 2] type specified here
  │                             │       
  │                             Type () inferred here
  │ ╭────────────────────────────────────────────^
8 │ │         [Self::Left([t, t]), Self::Right([u, u])]
9 │ │     }
  │ ╰─────^ Found type [Maybe<core::marker::Data + core::marker::Copy, (), 2>; 2]
  │  
  = note: Expected: bool
                in: [Maybe<core::marker::Data + core::marker::Copy, bool, 2>; 2]
               Got: ()
                in: [Maybe<core::marker::Data + core::marker::Copy, (), 2>; 2]
